-- fix z-index

--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ p a {
     align-items: center;
     row-gap: .7rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    z-index: 1200;
 }
 
 .navbar-actions {
